--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
             <img src="images/my-bg2.png" alt="">
            </div>
    </section>
+
+   <section class="second">
+    <div class="half">
+    <img src="images/my-bg3.png" alt="">
+   </div>
+    <div class="half">
+        <h2>Dream Big </h2>
+    <h3> Become A Web Developer</h3>
+        <p>Hey this is Rabi Mexan , a very simple guy from a small village of Bangladesh . I just love photography and i
+            want to become a passionet web devoloper in life.</p>
+            <a href="#home" class="button">Get Started with me </a>
+    </div>
+           <
+   </section>
 </body>
 
 </html>
