--- a/index.html
+++ b/index.html
@@ -13,33 +13,61 @@
 </head>
 
 <body>
-   <section class="first">
-    <div class="half">
-        <h1>Hey , This Is </h1>
-    <h2> <span class="name">Rabi Mezan</span> World!</h1>
-        <h3>A Web Developer And A Photographer</h3>
-        <p>Hey this is Rabi Mexan , a very simple guy from a small village of Bangladesh . I just love photography and i
-            want to become a passionet web devoloper in life.</p>
-            <a href="#home" class="button">Hire me</a>
-    </div>
-           <div class="half">
+    
+    <section class="first flex-box">
+        <div class="half half-text">
+            <h1>Hey , This Is </h1>
+            <h2> <span class="name">Rabi Mezan</span> World!</h1>
+                <h3>A Web Developer And A Photographer</h3>
+                <p>Hey this is Rabi Mexan, a very simple guy from a small village of Bangladesh. I just love photography
+                    and i
+                    want to become a passhionet web devoloper in life.</p>
+                <a href="#home" class="button">Hire me</a>
+        </div>
+        <div class="half img-half">
             <img src="images/my-bg2.png" alt="">
-           </div>
-   </section>
+        </div>
+    </section>
 
-   <section class="second">
-    <div class="half">
-    <img src="images/my-bg3.png" alt="">
-   </div>
-    <div class="half">
-        <h2>Dream Big </h2>
-    <h3> Become A Web Developer</h3>
-        <p>Hey this is Rabi Mexan , a very simple guy from a small village of Bangladesh . I just love photography and i
-            want to become a passionet web devoloper in life.</p>
-            <a href="#home" class="button">Get Started with me </a>
-    </div>
-           <
-   </section>
+    <section class="second flex-box">
+        <div class="half">
+            <img src="images/my-bg3.png" alt="">
+        </div>
+        <div class="half">
+            <h2>Dream Big </h2>
+            <h3> Become A Web Developer</h3>
+            <p>Hey this is Rabi Mexan , a very simple guy from a small village of Bangladesh . I just love photography
+                and i
+                want to become a passionet web devoloper in life.</p>
+            <a href="#home" class="button" target="blank">Get Started with me </a>
+        </div>
+    </section>
+
+    <section class="third">
+        <h1 id=main-ex>Experiences</h1>
+        <div class="flex-box">
+            <div class="half-ex" id="ex-1">
+                <h2>Noob Developer</h2>
+                <h4 class="name">2020-Present | Learning as a begginer</h4>
+                <p>Hey there , I'm still learning web development as a learner
+                    I don't no everything yet but it's my promise to myself that
+                    very soon I will become a pro web developer.Pray for me so that i can work hard for fulfulling
+                    my dream of becoming a web developer by 2022
+                </p>
+            </div>
+            <div class="half-ex" id="ex-2">
+                <h2>Pro Developer</h2>
+                <h4 class="name">2022-continue | Full stack web developer</h4>
+                <p>Hey there , I'm noe i'm a full stack web developmer and working as a senior developer
+                    in a renowed IT company . A huge thanks to programming hero for helping me to overcome my dream.
+                    They helped me a lot for becoming who am I today . Thanks a lot.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer class="foot">
+        <p>CopyRight : /Ravi Mexan/2021</p>
+    </footer>
 </body>
 
 </html>
